packages/validator/tests/snapshots/snapshot_tests__text_heading_compose.snap
---
source: packages/validator/tests/snapshot_tests.rs
expression: kotlin
---
package com.voce.generated

import androidx.compose.foundation.layout.*
import androidx.compose.material3.*
import androidx.compose.runtime.*
import androidx.compose.ui.*
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.text.font.FontWeight

@Composable
fun VoceScreen() {
    Column {
        Text(
            text = "Hello World",
            fontSize = 48.sp,
            fontWeight = FontWeight.Bold,
            color = Color(0xFF000000),
        )
    }
}
