packages/validator/tests/snapshots/snapshot_tests__text_heading_email.snap
---
source: packages/validator/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
<meta name="viewport" content="width=device-width, initial-scale=1.0" />
<title>Text Test</title>
</head>
<body style="margin:0;padding:0;background-color:#f4f4f4">
<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background-color:#f4f4f4">
<tr>
<td align="center">
<table role="presentation" cellpadding="0" cellspacing="0" width="600" style="max-width:600px;background-color:#ffffff">
<tr><td style="font-family:Arial,Helvetica,sans-serif;font-size:48px;font-weight:bold;color:rgb(0,0,0);text-align:left;padding:4px 0"><h1 style="margin:0">Hello World</h1></td></tr>
</table>
</td>
</tr>
</table>
</body>
</html>
