packages/validator/tests/snapshots/snapshot_tests__validation_missing_root.snap
---
source: packages/validator/tests/snapshot_tests.rs
expression: "errors.join(\"\\n\")"
---
[error] STR001: Document is missing a root ViewRoot
